# sample-building-ai-agents-with-strands

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  strands_presentation.md  subject_expert.py  utils.py
1_strands_basic_agent/: README.md  interactive_agent.py  simple_agent.py
2_tools/: README.md  custom_tools.py
3_mcp_integration/: README.md  agent_with_mcp.py  mcp_server.py  simple_agent_mcp.py  simple_mcp_server.py
4_a2a_integration/: README.md  calculator_agent.py  orchestrator_agent.py  test.http  time_agent.py  web_agent.py
chapter1/: subject_expert.py
chapter2/: subject_expert3.py
