[project]
name = "sample-building-ai-agents-with-strands"
version = "0.1.0"
description = "Sample project for building AI agents with Strands"
requires-python = ">=3.13"
dependencies = [
    # Strands AI Framework
    "strands-agents>=1.0.0",
    "strands-agents-tools>=0.2.0",
    "strands-agents[a2a]",
    
    # Web Framework for APIs
    "fastapi[standard]",
    "pydantic",
    "uvicorn",
    
    # Configuration Management
    "python-dotenv",
    
    # Knowledge Base & Document Processing
    "chromadb>=0.4.0",
    "PyPDF2>=3.0.0",
    
    # Database
    "tinydb",
    
    # LangChain Integration
    "langchain_aws",
    "langchain_chroma",
]